added: schema definition for parameter body
